update the text

--- a/Restly/assets/sass/style.sass
+++ b/Restly/assets/sass/style.sass
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*----------------------------------------------------------------------
-    Template Name: Restly - IT Solutions & Technology HTML Template
+    Template Name: JDComputers- IT Solutions & Technology HTML Template
     Template URI: https://webtend.net/demo/html/restly/
     Author: WebTend
     Author URI:  https://webtend.net/
