--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -1,5 +1,5 @@
 /*----------------------------------------------------------------------
-    Template Name: Restly - IT Solutions & Technology HTML Template
+    Template Name: JDComputers- IT Solutions & Technology HTML Template
     Template URI: https://webtend.net/demo/html/restly/
     Author: WebTend
     Author URI:  https://webtend.net/
