fixing bugs on all the pages

--- a/site/assets/css/rtl-responsive.css
+++ b/site/assets/css/rtl-responsive.css
@@ -56,5 +56,6 @@
 @media only screen and (max-width: 767px){
     .header-three .top-right{
         margin-left: auto;
+        display: none;
     }
 }
